public/assets/styles/styles.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Pangolin', sans-serif;
    text-transform: uppercase;
}

body{    
    background-image: url(/img/background.png);
    background-repeat: no-repeat;
    background-size: 1366px 768px;
    position: relative;
}

.burger{
    height: 5.5rem;
    position: absolute;
    z-index: 2;
}

.burger1{
    top: 418px;
    left: 53px;
}

.burger2{
    top: 418px;
    left: 263px;
}

.burger3{
    top: 418px;
    left: 465px;
}

.burger4{
    top: 418px;
    left: 668px;
}

.burger5{
    top: 418px;
    left: 878px;
}

.burger-display{
    position: absolute;
    background-color: rgb(239, 226, 175);
    color: rgb(37, 92, 160);
    border: solid black 1px;
    border-radius: 3px;
    text-align: center;
    display: flex;
    align-items: center;
    height: 75px;
    width: 125px;
    overflow: scroll;
    transform: translate(40%, -80%);
    transform-origin: bottom left;
}

.modal{
    width: 100vw;
    height: 100vh;
    position: absolute;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 5;
    overflow: hidden;
}

.container{
    width: 510px;
    height: 330px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.container ul{
    position: absolute;
    top: 50px;
    left: 50px;
    color: rgb(37, 92, 160);
}

.modal-order{
    position: relative;
}

.bob{
    position: absolute;
    height: 25rem;
    bottom: -45px;
    transform: rotate(-45deg);
    right: 0px;
    z-index: 6;
}

.tina{
    position: absolute;
    height: 15rem;
    top: 235px;
    left: 275px;
    z-index: 1;
}

.tina:hover{
    cursor: pointer;
}

.register{
    position: absolute;
    top: 332px;
    left: 721px;
    height: 8rem;
}

.register:hover{
    cursor: pointer;
}

#burgerName{
    font-size: 1.2rem;
    color: rgb(37, 92, 160);
    font-weight: bolder;
    border: solid black 1px;
    border-radius: 3px;
    text-transform: uppercase;
    position: absolute;
    padding: .19rem;
    width: 15rem;
    left: 18.5%;
    bottom: 40px;
}

#burgerName::-webkit-input-placeholder {
    color: rgb(73, 126, 190);
}

#burgerName::-moz-placeholder {
    color: rgb(73, 126, 190);
}

#newBurger{
    color: rgb(219, 219, 224);
    font-weight: bold;
    position: absolute;
    padding: .5rem;
    border: solid black 1px;
    border-radius: 3px;
    left: 73%;
    bottom: 40px;
    background-color: rgb(118, 136, 159);
    z-index: 80;
}

#newBurger:hover{
    color: white;
    background-color: rgb(78, 96, 121);
}

.hidden{
    display: none;
    pointer-events: none;
}

